Opened 4 years ago

Closed 4 years ago

#16822 closed bug (fixed)

Haiku hrev54968 64bit not updating anymore.

Reported by: bruno Owned by: nielx
Priority: blocker Milestone:
Component: Kits/Network Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by bruno)

Whether using Pkgman full-sync nor SoftwareUpdater working anymore...

Refreshing repository "Haiku" failed 0%: General system error Refreshing repository "HaikuPorts" failed 0%: General system error

Attachments (1)

syslog (510.1 KB ) - added by bruno 4 years ago.

Download all attachments as: .zip

Change History (9)

by bruno, 4 years ago

Attachment: syslog added

comment:1 by bruno, 4 years ago

Description: modified (diff)
Refreshing repository "Haiku" failed  0%: General system error
Refreshing repository "HaikuPorts" failed  0%: General system error
number of solvables: 6504, memory used: 355 K
number of ids: 26430 + 24071
string memory used: 103 K array + 418 K data,  rel memory used: 282 K array
string hash memory: 256 K, rel hash memory : 256 K
provide ids: 18895
provide space needed: 41955 + 48142
shrunk whatprovidesdata from 41955 to 9222
whatprovides memory used: 201 K id array, 224 K data
createwhatprovides took 8 ms
solver started
dosplitprovides=1, noupdateprovide=0, noinfarchcheck=0
allowuninstall=0, allowdowngrade=0, allownamechange=1, allowarchchange=0, allowvendorchange=0
promoteepoch=0, forbidselfconflicts=0
obsoleteusesprovides=1, implicitobsoleteusesprovides=0, obsoleteusescolors=0
dontinstallrecommended=0, addalreadyrecommended=0
obsoletes data: 1 entries
added 2945 rpm rules for installed solvables
added 612 rpm rules for updaters of installed solvables
added 0 rpm rules for packages involved in a job
added 0 rpm rules because of weak dependencies
707 of 4488 installable solvables considered for solving
pruned rules from 3558 to 3490
  binary: 359
  normal: 3130, 6268 literals
rpm rule memory used: 81 K
rpm rule creation took 2 ms
choice rule creation took 0 ms
3489 rpm rules, 2 * 350 update rules, 0 job rules, 0 infarch rules, 0 dup rules, 0 choice rules, 0 best rules
overall rule memory used: 98 K
problems so far: 0
initial decisions: 1
solving...
resolving job rules
resolving installed packages
deciding orphaned packages
keeping orphaned pkg:mediatomb-0.12.1-5-x86_64
deciding orphaned packages
solver statistics: 0 learned rules, 0 unsolvable, 0 minimization steps
done solving.

solver took 1 ms
final solver statistics: 0 problems, 0 learned rules, 0 unsolvable
solver_solve took 3 ms
Nothing to do.
Last edited 4 years ago by pulkomandy (previous) (diff)

comment:2 by bruno, 4 years ago

Description: modified (diff)

comment:3 by bbjimmy, 4 years ago

doing a pkgman update I get:

~/Desktop> pkgman update
Refreshing repository "FatElk_64" failed  0%: General system error
Refreshing repository "Haiku" failed  0%: General system error
Refreshing repository "HaikuPorts" failed  0%: General system error
Nothing to do.

Immediately, it obviously gets an errot and does not retry.

Last edited 4 years ago by bbjimmy (previous) (diff)

comment:4 by pulkomandy, 4 years ago

Component: - GeneralKits/Network Kit
Keywords: update pkgman removed
Milestone: UnscheduledR1/beta3
Owner: changed from nobody to nielx
Priority: highblocker
Status: newassigned

comment:5 by nielx, 4 years ago

On it.

comment:6 by nielx, 4 years ago

Status: assignedin-progress

Found it, there is a lot of missing logic in FetchFileJob::Execute(), will provide a patch soon.

comment:8 by nielx, 4 years ago

Milestone: R1/beta3
Resolution: fixed
Status: in-progressclosed
Version: R1/beta2R1/Development

Fixed and part of hrev54971

If you want to upgrade to this version, you should use the boot loader to get in a previous state, and then run SoftwareUpdater.

Of course, this only makes sense after the new build lands tomorrow.

Note: See TracTickets for help on using tickets.